--- a/config.yaml
+++ b/config.yaml
@@ -1,21 +1,33 @@
 ---
-LiRA-flickr-GCN-0hop:
-  attack: "lira"
-  dataset: "flickr"
+Confidence-cora-GCN-0hop:
+  attack: "confidence"
+  dataset: "cora"
   model: "GCN"
-  epochs_target: 2000
-  hidden_dim_target: [64]
+  epochs_target: 500
+  hidden_dim_target: [32]
   num_shadow_models: 128
   query_hops: 0
   transductive: false
-  target_fpr: 0.001
-LiRA-flickr-GCN-2hop:
-  attack: "lira"
-  dataset: "flickr"
+  target_fpr: 0.005
+Confidence-cora-GCN-2hop:
+  attack: "confidence"
+  dataset: "cora"
   model: "GCN"
-  epochs_target: 2000
-  hidden_dim_target: [64]
+  epochs_target: 500
+  hidden_dim_target: [32]
   num_shadow_models: 128
   query_hops: 2
   transductive: false
-  target_fpr: 0.001
+  inductive_inference: false
+  target_fpr: 0.005
+Confidence-cora-GCN-2hop-inductive-inference:
+  attack: "confidence"
+  dataset: "cora"
+  model: "GCN"
+  epochs_target: 500
+  hidden_dim_target: [32]
+  num_shadow_models: 128
+  query_hops: 2
+  transductive: false
+  inductive_inference: true
+  target_fpr: 0.005
