--- a/config.yaml
+++ b/config.yaml
@@ -1,14 +1,4 @@
 ---
-Confidence-cora-GCN-0hop:
-  attack: "confidence"
-  dataset: "cora"
-  model: "GCN"
-  epochs_target: 500
-  hidden_dim_target: [32]
-  num_shadow_models: 128
-  query_hops: 0
-  transductive: false
-  target_fpr: 0.005
 Confidence-cora-GCN-2hop:
   attack: "confidence"
   dataset: "cora"
@@ -16,7 +6,7 @@ Confidence-cora-GCN-2hop:
   epochs_target: 500
   hidden_dim_target: [32]
   num_shadow_models: 128
-  query_hops: 2
+  query_hops: [0,2]
   transductive: false
   inductive_inference: false
   target_fpr: 0.005
@@ -27,7 +17,7 @@ Confidence-cora-GCN-2hop-inductive-inference:
   epochs_target: 500
   hidden_dim_target: [32]
   num_shadow_models: 128
-  query_hops: 2
+  query_hops: [2]
   transductive: false
   inductive_inference: true
   target_fpr: 0.005
